<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.wms</groupId>
    <artifactId>po-modernization</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>PO Modernization - Production</name>
    <description>Production-ready PO Flow Modernization with Orchestrated Saga Pattern</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <modules>
        <module>po-domain</module>
        <module>po-infrastructure</module>
        <module>po-kafka</module>
        <module>po-rules</module>
        <module>po-variation</module>
        <module>po-service</module>
        <module>po-activity</module>
        <module>po-workflow</module>
        <module>po-legacy-bridge</module>
        <module>po-plugin</module>
        <module>po-api</module>
        <module>po-config</module>
        <module>po-test</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <temporal.version>1.22.3</temporal.version>
        <drools.version>8.44.0.Final</drools.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <lombok.version>1.18.30</lombok.version>
        <springdoc.version>2.3.0</springdoc.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>com.wms</groupId>
                <artifactId>po-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wms</groupId>
                <artifactId>po-variation</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wms</groupId>
                <artifactId>po-activity</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wms</groupId>
                <artifactId>po-workflow</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wms</groupId>
                <artifactId>po-legacy-bridge</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wms</groupId>
                <artifactId>po-config</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wms</groupId>
                <artifactId>po-plugin</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wms</groupId>
                <artifactId>po-rules</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wms</groupId>
                <artifactId>po-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wms</groupId>
                <artifactId>po-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wms</groupId>
                <artifactId>po-kafka</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Temporal -->
            <dependency>
                <groupId>io.temporal</groupId>
                <artifactId>temporal-sdk</artifactId>
                <version>${temporal.version}</version>
            </dependency>

            <!-- Drools -->
            <dependency>
                <groupId>org.drools</groupId>
                <artifactId>drools-core</artifactId>
                <version>${drools.version}</version>
            </dependency>
            <dependency>
                <groupId>org.drools</groupId>
                <artifactId>drools-compiler</artifactId>
                <version>${drools.version}</version>
            </dependency>
            <dependency>
                <groupId>org.drools</groupId>
                <artifactId>drools-mvel</artifactId>
                <version>${drools.version}</version>
            </dependency>
            <dependency>
                <groupId>org.kie</groupId>
                <artifactId>kie-api</artifactId>
                <version>${drools.version}</version>
            </dependency>

            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <!-- Caffeine Cache -->
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>3.1.8</version>
            </dependency>

            <!-- Kafka -->
            <dependency>
                <groupId>org.springframework.kafka</groupId>
                <artifactId>spring-kafka</artifactId>
                <version>3.1.4</version>
            </dependency>

            <!-- Redis/Redisson -->
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>3.24.3</version>
            </dependency>

            <!-- YAML -->
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>2.2</version>
            </dependency>

            <!-- SpringDoc OpenAPI (Swagger) -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- Karate Testing -->
            <dependency>
                <groupId>com.intuit.karate</groupId>
                <artifactId>karate-junit5</artifactId>
                <version>1.4.1</version>
                <scope>test</scope>
            </dependency>

            <!-- Temporal Testing -->
            <dependency>
                <groupId>io.temporal</groupId>
                <artifactId>temporal-testing</artifactId>
                <version>${temporal.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Testcontainers -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers</artifactId>
                <version>1.19.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>1.19.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>mssqlserver</artifactId>
                <version>1.19.3</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
